fully functional rest api service